fixed some issues with the input being not aligned

--- a/public/deck.less
+++ b/public/deck.less
@@ -264,32 +264,34 @@ md-dialog {
     }
 }
 
+form md-divider {
+    margin-bottom: 10px;
+}
 
-//
-// .card img:active {
-//     -webkit-transform: scale(2, 2);
-//     -moz-transform: scale(2, 2);
-//     -ms-transform: scale(2, 2);
-//     -o-transform: scale(2, 2);
-//     transform: scale(2, 2);
-//     transform: rotateY( 180deg );
-//     -moz-transition: all 500ms;
-//     -webkit-transition: all 500ms;
-//     -o-transition: all 500ms;
-// }
-// .card img:not(:active) {
-//     -webkit-transform: scale(1.25, 1.25);
-//     -moz-transform: scale(1.25, 1.25);
-//     -ms-transform: scale(1.25, 1.25);
-//     -o-transform: scale(1.25, 1.25);
-//     transform: scale(1.25, 1.25);
-//     transform: rotateY( 360deg );
-//     -moz-transition: all 500ms;
-//     -webkit-transition: all 500ms;
-//     -o-transition: all 500ms;
-// }
-// .card.back {
-//     transform: rotateY(180deg);
-//     display: block;
-//     background: url('http://gatherer.wizards.com/Handlers/Image.ashx?multiverseid=0&type=card');
-// }
+form md-input-container {
+    margin-bottom: 0px;
+    padding: 0px;
+    margin-bottom: -5px;
+    width: 100%;
+}
+
+form md-chips-wrap {
+    margin-top: -5px;
+    margin-bottom: 12px;
+}
+.md-chips {
+    padding: 8px 0 0 3px;
+}
+.md-chips .md-chip-input-container {
+    padding: 0;
+}
+.md-chips .md-chip-input-container md-autocomplete {
+    padding: 4px 0 0 0 !important;
+}
+.md-chips .md-chip-input-container md-autocomplete input {
+    padding-top: 5px;
+    font-size: 16px;
+}
+.md-chips .md-chip div.md-chip-content {
+    font-size: 14px;
+}
